[package]
name = "probe-rs-target-nordic"
version.workspace = true
edition.workspace = true
description = "Target description schema for probe-rs."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license.workspace = true
publish.workspace = true

[lib]
name = "probe_rs_target"

[dependencies]
jep106 = "0.2.8"
serde = { version = "1", features = ["derive"] }
base64 = "0.22.0"
