[package]
name = "rtthost"
description = "RTT (Real-Time Transfer) client"
version.workspace = true
edition.workspace = true
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository.workspace = true
publish = false

[dependencies]
pretty_env_logger = "0.5"
probe-rs-nordic = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["cargo", "derive"] }
